[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/tilesets01/A2_Ground.png" type="Texture" id=1]
[ext_resource path="res://src/mission/mission1.gd" type="Script" id=2]
[ext_resource path="res://assets/porcupine.png" type="Texture" id=3]
[ext_resource path="res://assets/canvas/canvas green.png" type="Texture" id=4]
[ext_resource path="res://assets/canvas/canvas gold.png" type="Texture" id=5]
[ext_resource path="res://assets/canvas/canvas Bule.png" type="Texture" id=6]
[ext_resource path="res://assets/Lifebars/VIDA_10.png" type="Texture" id=7]
[ext_resource path="res://assets/Lifebars/VIDA_0 - Cà¸‚pia.png" type="Texture" id=8]
[ext_resource path="res://assets/canvas red.png" type="Texture" id=9]
[ext_resource path="res://assets/countdownProgress/CountDown_1.png" type="Texture" id=10]
[ext_resource path="res://assets/countdownProgress/CountDown_2.png" type="Texture" id=11]
[ext_resource path="res://src/Chapter/Ch1/ch1-2/Dialog gue Box.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/character/red.png" type="Texture" id=13]
[ext_resource path="res://assets/enemy/EMTree2.png" type="Texture" id=14]
[ext_resource path="res://src/mission/attactPlayer.tscn" type="PackedScene" id=15]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=4]
0/name = "A2_Ground.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "A2_Ground.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 32, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "A2_Ground.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 128, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 96, 24, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 216, 32 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = SubResource( 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 232, 32 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=14]
size = 35
font_data = SubResource( 13 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 240, 40 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=17]
size = 35
font_data = SubResource( 16 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 232, 32 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=20]
size = 32
outline_size = 2
use_mipmaps = true
font_data = SubResource( 19 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=22]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 21 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://Font/THSarabunNew.ttf"

[sub_resource type="DynamicFont" id=24]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 23 )

[node name="mission1" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="Node2D" parent="."]

[node name="bg" type="TileMap" parent="BG"]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BG"]
position = Vector2( 251.984, 199.068 )
scale = Vector2( 7.50959, 5.40972 )
frames = SubResource( 6 )

[node name="Player" type="Sprite" parent="BG"]
visible = false
position = Vector2( 264, 208 )
scale = Vector2( 0.723837, 0.645548 )
texture = ExtResource( 3 )

[node name="NPC" type="Sprite" parent="BG"]
position = Vector2( 1120, 216 )
scale = Vector2( 3.785, 3.707 )
texture = ExtResource( 14 )
flip_h = true

[node name="Data" type="Node2D" parent="."]

[node name="Data" type="NinePatchRect" parent="Data"]
margin_left = -12.4003
margin_top = -1.96381
margin_right = 1403.6
margin_bottom = 766.036
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1" type="NinePatchRect" parent="Data/Data"]
margin_left = 200.0
margin_top = 536.0
margin_right = 648.0
margin_bottom = 603.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Data/Data/answer1"]
margin_left = 16.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAAAAAAAAAAAAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer1" type="Area2D" parent="Data/Data/answer1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Data/Data/answer1/answer1"]
position = Vector2( 224, 32 )
shape = SubResource( 9 )

[node name="answer2" type="NinePatchRect" parent="Data/Data"]
margin_left = 752.0
margin_top = 536.0
margin_right = 1200.0
margin_bottom = 608.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Data/Data/answer2"]
margin_left = 16.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAAAAAAAAAAAAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer2" type="Area2D" parent="Data/Data/answer2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Data/Data/answer2/answer2"]
position = Vector2( 224, 40 )
shape = SubResource( 12 )

[node name="answer3" type="NinePatchRect" parent="Data/Data"]
margin_left = 200.0
margin_top = 632.0
margin_right = 648.0
margin_bottom = 696.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Data/Data/answer3"]
margin_left = 8.0
margin_top = 8.0
margin_right = 440.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAAAAAAAAAAAAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer3" type="Area2D" parent="Data/Data/answer3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Data/Data/answer3/answer3"]
position = Vector2( 224, 32 )
shape = SubResource( 15 )

[node name="answer4" type="NinePatchRect" parent="Data/Data"]
margin_left = 752.0
margin_top = 632.0
margin_right = 1200.0
margin_bottom = 696.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Data/Data/answer4"]
margin_left = 16.0
margin_top = 8.0
margin_right = 432.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AAAAAAAAAAAAAAAAAAAAAAAA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer4" type="Area2D" parent="Data/Data/answer4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Data/Data/answer4/answer4"]
position = Vector2( 224, 32 )
shape = SubResource( 18 )

[node name="question" type="NinePatchRect" parent="Data/Data"]
margin_left = 64.0
margin_top = 48.0
margin_right = 992.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pictures" type="NinePatchRect" parent="Data/Data/question"]
margin_left = 144.0
margin_top = 64.0
margin_right = 1072.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Data/Data/question"]
margin_left = 320.0
margin_top = 400.0
margin_right = 1064.0
margin_bottom = 448.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "dffdhdfhdhre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Node2D" parent="."]

[node name="Player" type="TextureProgress" parent="Life"]
margin_left = 105.193
margin_top = 75.655
margin_right = 497.193
margin_bottom = 131.655
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Life/Player"]
margin_left = -38.0
margin_right = 58.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HP"

[node name="NPC" type="TextureProgress" parent="Life"]
margin_left = 927.657
margin_top = 75.6553
margin_right = 1305.66
margin_bottom = 115.655
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Life/NPC"]
anchor_bottom = 0.2
margin_left = -40.0
margin_right = -8.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countdown" type="Node2D" parent="."]

[node name="countdown" type="Timer" parent="countdown"]
autostart = true

[node name="countdownProgress" type="TextureProgress" parent="countdown"]
margin_left = 188.765
margin_top = 14.6241
margin_right = 1188.77
margin_bottom = 57.6241
max_value = 60.0
value = 60.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 440, 336 )

[node name="Node2D" parent="." instance=ExtResource( 15 )]
position = Vector2( 318.707, 240.22 )
[connection signal="mouse_entered" from="Data/Data/answer1" to="." method="_on_answer1_mouse_entered"]
[connection signal="mouse_exited" from="Data/Data/answer1" to="." method="_on_answer1_mouse_exited"]
[connection signal="mouse_entered" from="Data/Data/answer1/answer1" to="." method="_on_answer1_mouse_entered"]
[connection signal="mouse_exited" from="Data/Data/answer1/answer1" to="." method="_on_answer1_mouse_exited"]
[connection signal="mouse_entered" from="Data/Data/answer2/answer2" to="." method="_on_answer2_mouse_entered"]
[connection signal="mouse_exited" from="Data/Data/answer2/answer2" to="." method="_on_answer2_mouse_exited"]
[connection signal="mouse_entered" from="Data/Data/answer3/answer3" to="." method="_on_answer3_mouse_entered"]
[connection signal="mouse_exited" from="Data/Data/answer3/answer3" to="." method="_on_answer3_mouse_exited"]
[connection signal="mouse_entered" from="Data/Data/answer4/answer4" to="." method="_on_answer4_mouse_entered"]
[connection signal="mouse_exited" from="Data/Data/answer4/answer4" to="." method="_on_answer4_mouse_exited"]
[connection signal="timeout" from="countdown/countdown" to="." method="_on_countdown_timeout"]
